# AI_Algorithms

./: README.md  pyproject.toml
SimpleClassification/: k-means_2d.py  knn_2d.py  knn_digits.py
