[tool.poetry]
name = "ai-algorithms"
version = "0.1.0"
description = ""
authors = ["Joost Kremers <joostkremers@fastmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.1"
python-lsp-ruff = "^2.2.0"
pylsp-mypy = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
